manuka - login register user level

--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#e6ecff"
+    android:background="@color/colorHome"
     tools:context=".ui.home.Account">
 
     <!-- Manuka -->
@@ -36,7 +36,7 @@
             <Button
                 android:id="@+id/myads"
                 android:layout_width="match_parent"
-                android:layout_height="54dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
                 android:background="#ffffff"
                 android:drawableStart="@drawable/ic_baseline_filter_24"
@@ -48,12 +48,12 @@
                 android:text="@string/account_myads"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"
-                android:textSize="18sp"></Button>
+                android:textSize="16sp"></Button>
 
             <Button
                 android:id="@+id/accountMember"
                 android:layout_width="match_parent"
-                android:layout_height="54dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
                 android:background="#ffffff"
                 android:drawableStart="@drawable/ic_baseline_event_24"
@@ -65,12 +65,12 @@
                 android:text="@string/account_membership"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"
-                android:textSize="18sp"></Button>
+                android:textSize="16sp"></Button>
 
             <Button
                 android:id="@+id/favourite"
                 android:layout_width="match_parent"
-                android:layout_height="54dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
                 android:background="#ffffff"
                 android:drawableStart="@drawable/ic_baseline_star_24"
@@ -82,12 +82,12 @@
                 android:text="@string/account_fav"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"
-                android:textSize="18sp"></Button>
+                android:textSize="16sp"></Button>
 
             <Button
                 android:id="@+id/myprofile"
                 android:layout_width="match_parent"
-                android:layout_height="54dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:background="#ffffff"
@@ -100,12 +100,12 @@
                 android:text="@string/account_profile"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"
-                android:textSize="18sp"></Button>
+                android:textSize="16sp"></Button>
         </LinearLayout>
 
             <Button
                 android:layout_width="match_parent"
-                android:layout_height="54dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
                 android:background="#ffffff"
                 android:drawableStart="@drawable/ic_baseline_verified_user_24"
@@ -118,13 +118,13 @@
                 android:text="@string/account_safe"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 tools:targetApi="m"></Button>
 
             <Button
                 android:id="@+id/faq"
                 android:layout_width="match_parent"
-                android:layout_height="54dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
                 android:background="#ffffff"
                 android:drawableStart="@drawable/ic_baseline_battery_unknown_24"
@@ -136,11 +136,11 @@
                 android:text="@string/account_faq"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"
-                android:textSize="18sp"></Button>
+                android:textSize="16sp"></Button>
 
             <Button
                 android:layout_width="match_parent"
-                android:layout_height="54dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
                 android:background="#ffffff"
                 android:drawableStart="@drawable/ic_baseline_slideshow_24"
@@ -153,13 +153,13 @@
                 android:text="@string/account_howto"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 tools:targetApi="m"></Button>
 
             <Button
                 android:id="@+id/donateUs"
                 android:layout_width="match_parent"
-                android:layout_height="54dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
                 android:background="#ffffff"
                 android:drawableStart="@drawable/ic_baseline_double_arrow_24"
@@ -171,12 +171,12 @@
                 android:text="@string/account_donate"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"
-                android:textSize="18sp"></Button>
+                android:textSize="16sp"></Button>
 
             <Button
                 android:id="@+id/logout"
                 android:layout_width="match_parent"
-                android:layout_height="54dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="68dp"
                 android:background="#ffffff"
@@ -189,7 +189,7 @@
                 android:text="@string/account_logout"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"
-                android:textSize="18sp"></Button>
+                android:textSize="16sp"></Button>
 
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
