--- a/app/src/main/res/layout/manuka_ad_images.xml
+++ b/app/src/main/res/layout/manuka_ad_images.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="100dp"
-    android:layout_height="80dp"
+    android:layout_width="84dp"
+    android:layout_height="74dp"
     android:background="@color/colorWhite">
 
     <ImageView
@@ -11,7 +11,7 @@
         android:layout_margin="10dp"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="@color/colorWhite"
+        android:background="@color/colorGreen"
         android:layout_alignParentRight="true"/>
 
     <ImageView
